# ekg-stream

./: LICENSE  README.md  cargo.toml  start_stream.sh
data/: Cargo.toml
gui/: Cargo.toml
gui/src/: main.rs
proto/: ingest.proto
server/: Cargo.toml
server/smoke_tests/: unary.sh
server/src/: config.rs  ingest_service.rs  main.rs  process.rs  state.rs
