[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
ingest-proto = { version = "0.1.0", path = "../crates/ingest-proto" }
tokio = { version = "1.47.1", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
